2 implement reading and saving app settings (#3)
* Added model for settings

* Added model for settings and logic

* Update build

* Update build

* Update README.md

* Added person data and refactoring settings.