@@ -1,2 +1,8 @@
 # ph
 program helper
+
+--module-path C:/lib/javafx-sdk-17.0.0.1/lib --add-modules javafx.controls,javafx.fxml
+
+
+java --module-path <path-to>/javafx-sdk-11/lib \
+--add modules=javafx.controls -jar my-project-ALL-1.0-SNAPSHOT.jar
